# ChangeLog for net-dialup/freeradius
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.100 2012/04/06 21:54:37 pacho Exp $

  06 Apr 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #63588

  26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> freeradius-2.1.11.ebuild:
  Stable on amd64 wrt bug #339389

*freeradius-2.1.12 (20 Nov 2011)

  20 Nov 2011; Alin Năstac <mrness@gentoo.org>
  files/freeradius-2.1.10-qafixes.patch, +freeradius-2.1.12.ebuild,
  +files/freeradius-2.1.12-pkglibdir.patch,
  +files/freeradius-2.1.12-qafixes.patch, +files/freeradius-2.1.12-ssl.patch,
  +files/freeradius-2.1.12-versionless-la-files.patch, +files/radius.init-r2:
  Allow radius service to start even if /var/log/radius directory is missing
  (#385443). Adapt init script to openrc requirements (#386111). Version bump
  with a changed daemon user/group (radius iso radiusd).

  13 Oct 2011; Andreas Schuerch <nativemad@gentoo.org>
  freeradius-2.1.11.ebuild:
  x86 stable, security bug 339389.

  06 Oct 2011; Markos Chandras <hwoarang@gentoo.org> freeradius-2.1.11.ebuild:
  Port ebuild to EAPI4 so we can use REQUIRED_USE for frxp and threads. Bug
  #385575

*freeradius-2.1.11 (26 Sep 2011)

  26 Sep 2011; Markos Chandras <hwoarang@gentoo.org> +freeradius-2.1.11.ebuild:
  Non-maintainer version bump. Thanks to Bjarke Istrup Pedersen
  <gurligebis@gentoo.org>. Bug #384027

*freeradius-2.1.10 (26 May 2011)

  26 May 2011; Markos Chandras <hwoarang@gentoo.org> +freeradius-2.1.10.ebuild,
  +files/freeradius-2.1.10-ipv6.patch,
  +files/freeradius-2.1.10-pkglibdir.patch,
  +files/freeradius-2.1.10-qafixes.patch, +files/freeradius-2.1.10-ssl.patch,
  +files/freeradius-2.1.10-versionless-la-files.patch:
  Version bump. Thanks to Christian Franke <nobody-gentoo@nowhere.ws>. Bug
  308449

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> freeradius-2.0.5.ebuild,