@@ -1,10 +1,10 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/Attic/freeradius-2.1.7.ebuild,v 1.2 2010/06/17 21:46:03 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/Attic/freeradius-2.1.7.ebuild,v 1.3 2012/06/14 01:43:16 zmedico Exp $
 
 EAPI="2"
 
-inherit eutils multilib pam autotools libtool
+inherit eutils multilib pam autotools libtool user
 
 DESCRIPTION="Highly configurable free RADIUS server"
 SRC_URI="ftp://ftp.freeradius.org/pub/radius/${PN}-server-${PV}.tar.gz"
