@@ -1,6 +1,12 @@
 # ChangeLog for net-dialup/freeradius
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.100 2012/04/06 21:54:37 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.101 2012/06/14 01:43:16 zmedico Exp $
+
+  14 Jun 2012; Zac Medico <zmedico@gentoo.org> freeradius-2.0.5.ebuild,
+  freeradius-2.1.1.ebuild, freeradius-2.1.10.ebuild, freeradius-2.1.11.ebuild,
+  freeradius-2.1.12.ebuild, freeradius-2.1.3-r1.ebuild, freeradius-2.1.6.ebuild,
+  freeradius-2.1.7.ebuild:
+  inherit user for enewgroup and enewuser, and flag-o-matic for append-flags
 
   06 Apr 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, bug #63588
